# BroBot

./: .env.example  .gitignore  Cargo.toml  README.md  help.bro  usage.bro
src/: main.rs
src/commands/: .math.rs.swp  .utilities.rs.swp  math.rs  meme.rs  meta.rs  mod.rs  owner.rs  utilities.rs
