[package]
name = "bro_bot"
version = "0.0.1"
authors = ["Michael L <hurnhu5622@gmail.com>"]

[dependencies]
rand = "0.3.15"
chrono = "0.4"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"

[dependencies.serenity]
git = "https://github.com/zeyla/serenity.git"
features = ["framework", "standard_framework"]
