[package]
name = "bro_bot"
version = "0.0.1"
authors = ["Michael L <hurnhu5622@gmail.com>"]

[dependencies]
rand = "0.3.15"
chrono = "0.4"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
env_logger = "~0.4"
kankyo = "~0.1"
log = "~0.3"

[dependencies.serenity]
git = "https://github.com/zeyla/serenity.git"
branch = "v0.4.3"
features = ["cache", "framework", "standard_framework"]
