[package]
name = "bro_bot"
version = "0.0.1"
authors = ["Michael L <hurnhu5622@gmail.com>"]

[dependencies]
rand = "0.7.3"
chrono = "0.4.19"
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
env_logger = "0.7.1"
kankyo = "0.3.0"
log = "0.4.11"
serenity = "0.9.0-rc.2"

[dependencies.serenity]
default-features = false
features = ["cache", "framework", "standard_framework"]
version = "0.9.0-rc.2"

